Change site verification mode

--- a/index.html
+++ b/index.html
@@ -1,76 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Woowl Games</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"/>
-
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Woowl Games</title>
+	<link rel="stylesheet" href="style.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"/>
+	<meta name="google-site-verification" content="ZRlvGIku24yhFmy9qFu0bDWy8gqLNaUHMJFElEnH5hg" />
 </head>
 <body>
-  <header class="hero">
-    <div class="hero-content">
-      <img src="assets/woowl-games-logo.png" alt="Woowl Games logo" class="logo" />
-      <h1>Woowl Games</h1>
-      <p class="tagline">Casual games full of curiosity, mystery, and soul.</p>
-    </div>
-  </header>
+	<header class="hero">
+		<div class="hero-content">
+			<img src="assets/woowl-games-logo.png" alt="Woowl Games logo" class="logo" />
+			<h1>Woowl Games</h1>
+			<p class="tagline">Casual games full of curiosity, mystery, and soul.</p>
+		</div>
+	</header>
 
-  <section class="about">
-    <h2>About Woowl</h2>
-    <p>
-      Woowl Games is a one-dev indie studio crafting small, casual games for children and curious minds. It all started as <strong>Wood Owl Games</strong>, but a hilarious typo gave birth to <strong>"Woowl"</strong> – a woolly owl with a wild heart.
-    </p>
-    <p>
-      This project is born out of pure passion. Every game is made in my spare time, as a creative escape and an act of love. I want each project to feel playful, a little mysterious, and always filled with personality.
-    </p>
-    <p>📧 <a id="contact-email" href="#">[at]</a></p>
-  </section>
+	<section class="about">
+		<h2>About Woowl Games</h2>
+		<p>
+			Woowl Games is a one-dev indie studio crafting small, casual games for children and curious minds. It all started as <strong>Wood Owl Games</strong>, but a hilarious typo gave birth to <strong>"Woowl"</strong> – a woolly owl with a wild heart.
+		</p>
+		<p>
+			This project is born out of pure passion. Every game is made in my spare time, as a creative escape and an act of love. I want each project to feel playful, a little mysterious, and always filled with personality.
+		</p>
+		<p>📧 <a id="contact-email" href="#">[at]</a></p>
+	</section>
 
-  <section class="projects">
-    <h2>Our Games</h2>
-    <div class="project-grid">
-      <div class="project-card">
-        <img src="assets/games/Halloween memory - woowlgames.png" alt="Halloween Memory" />
-        <h3>Halloween Memory</h3>
-        <p>A spooky memory challenge with lights, rhythm, and Halloween vibes.</p>
-        <a href="https://alberdeveloper.itch.io/halloweenmemory" target="_blank">Play on Itch.io</a>
-      </div>
-      <div class="project-card">
-        <img src="assets/games/bilingualstories.png" alt="Bilingual Stories" />
-        <h3>Bilingual Stories</h3>
-        <p>Interactive stories for kids in multiple languages. Read, swipe, and learn!</p>
-        <span class="wip">In development</span>
-      </div>
-      <div class="project-card">
-        <img src="assets/games/lacasa.png" alt="La Casa" />
-        <h3>La Casa</h3>
-        <p>A narrative experience with tension, choice, and mystery. For players 16+.</p>
-        <span class="wip">In preproduction</span>
-      </div>
-    </div>
-  </section>
+	<section class="projects">
+		<h2>Our Games</h2>
+		<div class="project-grid">
+			<div class="project-card">
+				<img src="assets/games/Halloween memory - woowlgames.png" alt="Halloween Memory" />
+				<h3>Halloween Memory</h3>
+				<p>A spooky memory challenge with lights, rhythm, and Halloween vibes.</p>
+				<a href="https://alberdeveloper.itch.io/halloweenmemory" target="_blank">Play on Itch.io</a>
+			</div>
+			<div class="project-card">
+				<img src="assets/games/bilingualstories.png" alt="Bilingual Stories" />
+				<h3>Bilingual Stories</h3>
+				<p>Interactive stories for kids in multiple languages. Read, swipe, and learn!</p>
+				<span class="wip">In development</span>
+			</div>
+			<div class="project-card">
+				<img src="assets/games/lacasa.png" alt="La Casa" />
+				<h3>La Casa</h3>
+				<p>A narrative experience with tension, choice, and mystery. For players 16+.</p>
+				<span class="wip">In preproduction</span>
+			</div>
+		</div>
+	</section>
 
-  <section class="devlog">
-    <h2>Devlog</h2>
-    <p>
-      🛠 Coming soon! Behind-the-scenes thoughts, design challenges and dev experiments will appear here. Stay tuned!
-    </p>
-  </section>
+	<section class="devlog">
+		<h2>Devlog</h2>
+		<p>
+		🛠 Coming soon! Behind-the-scenes thoughts, design challenges and dev experiments will appear here. Stay tuned!
+		</p>
+	</section>
 
-  <footer>
-    <p>© 2025 Woowl Games. Made with joy, curiosity and a bit of spooky fluff.</p>
-    <div class="social-links">
-	  <a href="https://woowlgames.itch.io" target="_blank"><i class="fa-brands fa-itch-io"></i> Itch.io</a> | 
-	  <a href="https://bsky.app/profile/woowlgames.bsky.social" target="_blank"><i class="fa-brands fa-bluesky"></i> Bluesky</a> | 
-	  <a href="https://youtube.com/@woowlgames" target="_blank"><i class="fa-brands fa-youtube"></i> YouTube</a> | 
-	  <a href="https://twitter.com/woowlgames" target="_blank"><i class="fa-brands fa-x-twitter"></i> Twitter</a> | 
-	  <a href="https://instagram.com/woowlgames" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a> | 
-	  <a href="https://discord.gg/woowlgames" target="_blank"><i class="fa-brands fa-discord"></i> Discord</a> | 
-	  <a href="https://patreon.com/woowlgames" target="_blank"><i class="fa-brands fa-patreon"></i> Patreon</a>
-	</div>
-  </footer>
+	<footer>
+		<p>© 2025 Woowl Games. Made with joy, curiosity and a bit of spooky fluff.</p>
+		<div class="social-links">
+			<a href="https://woowlgames.itch.io" target="_blank"><i class="fa-brands fa-itch-io"></i> Itch.io</a> | 
+			<a href="https://play.google.com/store/apps/developer?id=Woowl+Games" target="_blank"><i class="fa-brands fa-google-play"></i> Google Play</a> | 
+			<a href="https://bsky.app/profile/woowlgames.bsky.social" target="_blank"><i class="fa-brands fa-bluesky"></i> Bluesky</a> | 
+			<a href="https://youtube.com/@woowlgames" target="_blank"><i class="fa-brands fa-youtube"></i> YouTube</a> | 
+			<a href="https://twitter.com/woowlgames" target="_blank"><i class="fa-brands fa-x-twitter"></i> Twitter</a> | 
+			<a href="https://instagram.com/woowlgames" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a> | 
+			<a href="https://discord.gg/woowlgames" target="_blank"><i class="fa-brands fa-discord"></i> Discord</a> | 
+			<a href="https://patreon.com/woowlgames" target="_blank"><i class="fa-brands fa-patreon"></i> Patreon</a>
+		</div>
+	</footer>
 	<script>
 		const user = "woowlgames";
 		const domain = "gmail.com";
@@ -80,5 +81,5 @@
 		emailLink.href = `mailto:${email}`;
 		emailLink.textContent = email;
 	</script>
-</body>
+	</body>
 </html>
