--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<header class="hero">
 		<div class="hero-content">
-			<img src="assets/woowl-games-logo.png" alt="Woowl Games logo" class="logo" />
+			<img src="assets/woowlgames-logo.png" alt="Woowl Games logo" class="logo" />
 			<h1>Woowl Games</h1>
 			<p class="tagline">Casual games full of curiosity, mystery, and soul.</p>
 		</div>
@@ -19,12 +19,8 @@
 
 	<section class="about">
 		<h2>About Woowl Games</h2>
-		<p>
-			Woowl Games is a one-dev indie studio crafting small, casual games for children and curious minds. It all started as <strong>Wood Owl Games</strong>, but a hilarious typo gave birth to <strong>"Woowl"</strong> – a woolly owl with a wild heart.
-		</p>
-		<p>
-			This project is born out of pure passion. Every game is made in my spare time, as a creative escape and an act of love. I want each project to feel playful, a little mysterious, and always filled with personality.
-		</p>
+		<p>Woowl Games is a one-dev indie studio crafting small, casual games for children and curious minds.</p>
+		<p>This project is born out of pure passion. Every game is made in my spare time, as a creative escape and an act of love for video games.. I want each project to feel playful, a little mysterious, and always filled with personality.</p>
 		<p>📧 <a id="contact-email" href="#">[at]</a></p>
 	</section>
 
@@ -32,8 +28,8 @@
 		<h2>Our Games</h2>
 		<div class="project-grid">
 			<div class="project-card">
-				<img src="assets/games/Halloween memory - woowlgames.png" alt="Halloween Memory" />
-				<h3>Halloween Memory</h3>
+				<img src="assets/games/woowlgames-halloween-memory.png" alt="Halloween Memory" />
+				<h3>Halloween Memory – Woowl Games</h3>
 				<p>A spooky memory challenge with lights, rhythm, and Halloween vibes.</p>
 				<a href="https://alberdeveloper.itch.io/halloweenmemory" target="_blank">Play on Itch.io</a>
 			</div>
@@ -54,22 +50,20 @@
 
 	<section class="devlog">
 		<h2>Devlog</h2>
-		<p>
-		🛠 Coming soon! Behind-the-scenes thoughts, design challenges and dev experiments will appear here. Stay tuned!
-		</p>
+		<p>🛠 Coming soon! Behind-the-scenes thoughts, design challenges and dev experiments will appear here. Stay tuned!</p>
 	</section>
 
 	<footer>
 		<p>© 2025 Woowl Games. Made with joy, curiosity and a bit of spooky fluff.</p>
 		<div class="social-links">
 			<a href="https://woowlgames.itch.io" target="_blank"><i class="fa-brands fa-itch-io"></i> Itch.io</a> | 
-			<a href="https://play.google.com/store/apps/developer?id=Woowl+Games" target="_blank"><i class="fa-brands fa-google-play"></i> Google Play</a> | 
+			<a href="https://play.google.com/store/apps/dev?id=6631888265714223564" target="_blank"><i class="fa-brands fa-google-play"></i> Google Play</a> | 
 			<a href="https://bsky.app/profile/woowlgames.bsky.social" target="_blank"><i class="fa-brands fa-bluesky"></i> Bluesky</a> | 
 			<a href="https://youtube.com/@woowlgames" target="_blank"><i class="fa-brands fa-youtube"></i> YouTube</a> | 
 			<a href="https://twitter.com/woowlgames" target="_blank"><i class="fa-brands fa-x-twitter"></i> Twitter</a> | 
 			<a href="https://instagram.com/woowlgames" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a> | 
-			<a href="https://discord.gg/woowlgames" target="_blank"><i class="fa-brands fa-discord"></i> Discord</a> | 
-			<a href="https://patreon.com/woowlgames" target="_blank"><i class="fa-brands fa-patreon"></i> Patreon</a>
+			<a href="https://discord.gg/SM7evkXw" target="_blank"><i class="fa-brands fa-discord"></i> Discord</a>
+			<!-- a href="https://patreon.com/woowlgames" target="_blank"><i class="fa-brands fa-patreon"></i> Patreon</a -->
 		</div>
 	</footer>
 	<script>
