Social links and favicon

--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Woowl Games</title>
+	<title>Woowl Games – Indie games with soul and mystery</title>
+	<link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+	<link rel="manifest" href="assets/favicon/site.webmanifest">
 	<link rel="stylesheet" href="style.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"/>
 	<meta name="google-site-verification" content="ZRlvGIku24yhFmy9qFu0bDWy8gqLNaUHMJFElEnH5hg" />
+	<meta name="robots" content="index, follow">
+	<meta name="description" content="Woowl Games – official site of the indie game developer blending mystery and emotion.">
+	<meta name="author" content="Woowl Games">
+
 </head>
 <body>
 	<header class="hero">
@@ -21,7 +29,7 @@
 		<h2>About Woowl Games</h2>
 		<p>Woowl Games is a one-dev indie studio crafting small, casual games for children and curious minds.</p>
 		<p>This project is born out of pure passion. Every game is made in my spare time, as a creative escape and an act of love for video games.. I want each project to feel playful, a little mysterious, and always filled with personality.</p>
-		<p>📧 <a id="contact-email" href="#">[at]</a></p>
+		<p><a id="contact-email" href="#">[at]</a></p>
 	</section>
 
 	<section class="projects">
@@ -56,13 +64,27 @@
 	<footer>
 		<p>© 2025 Woowl Games. Made with joy, curiosity and a bit of spooky fluff.</p>
 		<div class="social-links">
-			<a href="https://woowlgames.itch.io" target="_blank"><i class="fa-brands fa-itch-io"></i> Itch.io</a> | 
-			<a href="https://play.google.com/store/apps/dev?id=6631888265714223564" target="_blank"><i class="fa-brands fa-google-play"></i> Google Play</a> | 
-			<a href="https://bsky.app/profile/woowlgames.bsky.social" target="_blank"><i class="fa-brands fa-bluesky"></i> Bluesky</a> | 
-			<a href="https://youtube.com/@woowlgames" target="_blank"><i class="fa-brands fa-youtube"></i> YouTube</a> | 
-			<a href="https://twitter.com/woowlgames" target="_blank"><i class="fa-brands fa-x-twitter"></i> Twitter</a> | 
-			<a href="https://instagram.com/woowlgames" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a> | 
-			<a href="https://discord.gg/SM7evkXw" target="_blank"><i class="fa-brands fa-discord"></i> Discord</a>
+			<a href="https://woowlgames.itch.io" target="_blank">
+				<i class="fa-brands fa-itch-io"></i>
+			</a> 
+			<a href="https://play.google.com/store/apps/dev?id=6631888265714223564" target="_blank">
+				<i class="fa-brands fa-google-play"></i>
+			</a> 
+			<a href="https://bsky.app/profile/woowlgames.bsky.social" target="_blank">
+				<i class="fa-brands fa-bluesky"></i>
+			</a> 
+			<a href="https://youtube.com/@woowlgames" target="_blank">
+				<i class="fa-brands fa-youtube"></i>
+			</a> 
+			<a href="https://x.com/woowlgames" target="_blank">
+				<i class="fa-brands fa-x-twitter"></i>
+			</a> 
+			<a href="https://instagram.com/woowlgames" target="_blank">
+				<i class="fa-brands fa-instagram"></i>
+			</a> 
+			<a href="https://discord.gg/SM7evkXw" target="_blank">
+				<i class="fa-brands fa-discord"></i>
+			</a>
 			<!-- a href="https://patreon.com/woowlgames" target="_blank"><i class="fa-brands fa-patreon"></i> Patreon</a -->
 		</div>
 	</footer>
