Added Unity Assets section

--- a/index.html
+++ b/index.html
@@ -43,9 +43,26 @@
 			</div>
 			<div class="project-card">
 				<img src="assets/games/woowlgames-bilingual-stories.png" alt="Bilingual Stories" />
-				<h3>Bilingual Stories</h3>
+				<h3>Bilingual Stories – Woowl Games</h3>
 				<p>Interactive stories for kids in multiple languages. Read, swipe, and learn!</p>
 				<span class="wip">In development</span>
+			</div>
+		</div>
+	</section>
+	<section class="assets">
+		<h2>Unity assets</h2>
+		<div class="project-grid">
+			<div class="project-card">
+				<img src="assets/unity-assets/woowlgames-tab-size-info.jpg" alt="Tab Size Info" />
+				<h3>Tab Size Info – Woowl Games</h3>
+				<p>Display editor window sizes dynamically in their tabs when resized. Helpful for UI debugging and custom editor layouts.</p>
+				<a href="https://assetstore.unity.com/packages/tools/utilities/tab-size-info-323946?aid=1011lHuMX" target="_blank">View in Unity Asset Store</a>
+			</div>
+			<div class="project-card">
+				<img src="assets/unity-assets/woowlgames-mobile-icon-generator.jpg" alt="Mobile Icon Generator" />
+				<h3>Mobile Icon Generator – Woowl Games</h3>
+				<p>Automate Android icon creation! Instantly generate all required Legacy, Round, and multi-layer Adaptive icons with one click. Save hours of tedious work.</p>
+				<a href="https://assetstore.unity.com/packages/tools/utilities/mobile-icon-generator-327748?aid=1011lHuMX" target="_blank">View in Unity Asset Store</a>
 			</div>
 		</div>
 	</section>
@@ -79,7 +96,7 @@
 			<a href="https://instagram.com/woowlgames" target="_blank">
 				<i class="fa-brands fa-instagram"></i>
 			</a> 
-			<a href="https://discord.gg/SM7evkXw" target="_blank">
+			<a href="https://discord.gg/zFgPMfUKkX" target="_blank">
 				<i class="fa-brands fa-discord"></i>
 			</a>
 			<!-- a href="https://patreon.com/woowlgames" target="_blank"><i class="fa-brands fa-patreon"></i> Patreon</a -->
