Add canonical url and video for halloween memory project.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta name="robots" content="index, follow">
 	<meta name="description" content="Woowl Games – official site of the indie game developer blending mystery and emotion.">
 	<meta name="author" content="Woowl Games">
-
+	<link rel="canonical" href="https://woowlgames.com/" />
 </head>
 <body>
 	<header class="hero">
@@ -36,10 +36,10 @@
 		<h2>Our Games</h2>
 		<div class="project-grid">
 			<div class="project-card">
-				<img src="assets/games/woowlgames-halloween-memory.png" alt="Halloween Memory" />
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/wtx5uYQMSMQ?si=cE-Ydf0HwvBrM2kT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 				<h3>Halloween Memory – Woowl Games</h3>
 				<p>A spooky memory challenge with lights, rhythm, and Halloween vibes.</p>
-				<a href="https://alberdeveloper.itch.io/halloweenmemory" target="_blank">Play on Itch.io</a>
+				<a href="https://play.google.com/store/apps/details?id=com.AlberDeveloper.dev.halloweenmemory.lite" target="_blank">Get on Google Play</a>
 			</div>
 			<div class="project-card">
 				<img src="assets/games/woowlgames-bilingual-stories.png" alt="Bilingual Stories" />
