--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/wtx5uYQMSMQ?si=cE-Ydf0HwvBrM2kT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 				<h3>Halloween Memory – Woowl Games</h3>
 				<p>A spooky memory challenge with lights, rhythm, and Halloween vibes.</p>
-				<a href="https://play.google.com/store/apps/details?id=com.AlberDeveloper.dev.halloweenmemory.lite" target="_blank">Get on Google Play</a>
+				<a href="https://play.google.com/store/apps/details?id=com.AlberDeveloper.dev.halloweenmemory.lite" target="_blank">Get it on Google Play</a>
 			</div>
 			<div class="project-card">
 				<img src="assets/games/woowlgames-bilingual-stories.png" alt="Bilingual Stories" />
