Update About and press kit

--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
         "@context": "https://schema.org",
         "@graph": [
             {
-                "@type": "Organization",
+                "@type": "VideoGameDeveloper",
                 "@id": "https://woowlgames.com/#organization",
                 "name": "Woowl Games",
+                "alternateName": "Woowl",
                 "url": "https://woowlgames.com",
                 "description": "Independent game development studio creating interactive experiences for mobile and PC platforms.",
                 "email": "woowlgames@gmail.com",
@@ -76,6 +77,7 @@
             {
                 "@type": "VideoGame",
                 "name": "Halloween Memory",
+                "image": "https://play-lh.googleusercontent.com/eJKwewxVv9dqlUyu9GfLdk56En5VrVgkFnKC87DbeEQQ866IDH4OMOEh7zpBu6ztBkX1ZhampcZhkfqi66-z=s256-rw",
                 "description": "A fast and fun Simon-style game inspired by lights and sequences. Players must repeat color patterns that become more challenging with each round.",
                 "genre": ["Casual", "Memory", "Family"],
                 "playMode": "SinglePlayer",
@@ -315,18 +317,29 @@
                 <div
                     class="animate-on-scroll bg-white/5 backdrop-blur-xl border border-white/10 rounded-3xl p-8 md:p-12 shadow-glow max-w-4xl mx-auto mb-12">
                     <p class="text-xl md:text-2xl text-white mb-6 leading-relaxed">
-                        <strong class="text-accent-primary">Woowl Games</strong> is the creative identity of an
-                        independent developer crafting interactive experiences that blend exploration, mystery,
-                        narrative, and experimental gameplay.
+                        <strong class="text-accent-primary">Woowl Games</strong> is more than just a name—it is a
+                        deliberate design choice that reflects our identity. Born from the fusion of "Wow" (the spark of
+                        wonder) and "Owl" (the symbol of wisdom and observation), the name itself is a typographic
+                        puzzle: the <strong class="text-accent-primary">W</strong> spreads like wings aiming for new
+                        heights, the double <strong class="text-accent-primary">OO</strong> watches the world with the
+                        wide eyes of a nocturnal explorer, and the <strong class="text-accent-primary">L</strong>
+                        balances the composition like a steady tail. This "fantastic owl" hidden in plain text is the
+                        perfect emblem for our studio: we hide magic in the details, waiting for the curious to find it.
                     </p>
                     <p class="text-lg text-gray-300 mb-6 leading-relaxed">
-                        I work on games for mobile and PC, from casual and educational projects to atmospheric and
-                        intrigue-driven experiences.
+                        As an independent game development studio, we operate under the cover of creativity, much like
+                        our nocturnal namesake. We believe that the best interactive experiences are those that respect
+                        the player's intelligence. Whether building atmospheric narrative adventures for PC or polished,
+                        snappy experiences for mobile, the <strong class="text-accent-primary">Woowl Games</strong>
+                        approach remains constant: blend <strong class="text-white">experimental gameplay
+                            mechanics</strong> with <strong class="text-white">rich, immersive storytelling</strong>. We
+                        don't just write code; we craft worlds where every pixel and every line of dialogue serves a
+                        greater mystery.
                     </p>
                     <p class="text-lg text-gray-300 leading-relaxed">
-                        My design philosophy is rooted in <strong class="text-accent-primary">sparking
-                            curiosity</strong>, telling stories through environment and atmosphere, and offering small
-                        but meaningful experiences that invite players to explore.
+                        Our mission is simple but ambitious: to spark curiosity in an often predictable world. <strong
+                            class="text-accent-primary">Woowl Games</strong> invites players to look closer, think
+                        deeper, and explore further.
                     </p>
                 </div>
                 <!-- Stats -->
@@ -578,10 +591,22 @@
                 <div class="grid md:grid-cols-2 gap-6">
                     <div class="animate-on-scroll bg-elevated rounded-xl p-6 shadow-lg border border-white/5">
                         <h3 class="font-display text-xl font-bold text-accent-primary mb-4">About Woowl Games</h3>
-                        <p class="text-gray-300 leading-relaxed">Woowl Games is an independent game development studio
-                            creating interactive experiences for mobile and PC platforms. Our focus is on
-                            narrative-driven, atmospheric, and experimental gameplay that sparks curiosity and invites
-                            exploration.</p>
+                        <p class="text-gray-300 leading-relaxed mb-4"><strong class="text-white">Woowl Games</strong> is
+                            an independent game development studio founded in 2024, dedicated to crafting high-quality
+                            interactive experiences for Mobile (Android/iOS) and PC platforms. The studio's name acts as
+                            both a moniker and a manifesto—a typographic representation of an owl (W-wings, OO-eyes,
+                            L-tail) that symbolizes our commitment to wisdom, observation, and the "wow" factor of
+                            discovery.</p>
+                        <p class="text-gray-300 leading-relaxed">Specializing in the Unity engine, <strong
+                                class="text-white">Woowl Games</strong> bridges the gap between casual accessibility and
+                            hardcore depth. Our portfolio spans from family-friendly memory games like <em>Halloween
+                                Memory</em> to experimental narrative projects currently in development. At <strong
+                                class="text-white">Woowl Games</strong>, we focus heavily on <strong
+                                class="text-white">atmospheric design</strong>, <strong class="text-white">environmental
+                                storytelling</strong>, and <strong class="text-white">polished user interfaces</strong>,
+                            ensuring that even our smallest tools and assets meet a premium standard. We are not just
+                            making games; we are cultivating a garden of digital curiosities for players who seek
+                            something different.</p>
                     </div>
                     <div class="animate-on-scroll bg-elevated rounded-xl p-6 shadow-lg border border-white/5"
                         style="animation-delay: 0.1s;">
