--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
                                 <h3 class="font-display text-2xl font-bold text-white">Mobile Icon Generator</h3>
                                 <p class="text-sm text-gray-400 mt-1">developed by Woowl Games</p>
                                 <span
-                                    class="px-3 py-1 rounded-full text-xs font-semibold uppercase tracking-wide whitespace-nowrap flex-shrink-0 published-badge\u0022\u003ePublished</span>
+                                    class="px-3 py-1 rounded-full text-xs font-semibold uppercase tracking-wide whitespace-nowrap flex-shrink-0 published-badge">Published</span>
                             </div>
                             <div class="flex flex-wrap gap-2 mb-4">
                                 <span
@@ -609,7 +609,7 @@
                                 <h3 class="font-display text-2xl font-bold text-white">Tab Size Info</h3>
                                 <p class="text-sm text-gray-400 mt-1">developed by Woowl Games</p>
                                 <span
-                                    class="px-3 py-1 rounded-full text-xs font-semibold uppercase tracking-wide whitespace-nowrap flex-shrink-0 published-badge\u0022\u003ePublished</span>
+                                    class="px-3 py-1 rounded-full text-xs font-semibold uppercase tracking-wide whitespace-nowrap flex-shrink-0 published-badge">Published</span>
                             </div>
                             <div class="flex flex-wrap gap-2 mb-4">
                                 <span
