seo: brand name optimization, logo rename, and deployment fix

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <meta property="og:description"
         content="Woowl Games creates interactive experiences blending exploration, mystery, narrative, and experimental gameplay for mobile and PC.">
     <meta property="og:image"
-        content="https://woowlgames.com/logo.svg">
+        content="https://woowlgames.com/woowl-games-logo.svg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Woowl Games">
@@ -46,7 +46,7 @@
     <meta property="twitter:description"
         content="Woowl Games creates interactive experiences blending exploration, mystery, narrative, and experimental gameplay for mobile and PC.">
     <meta property="twitter:image"
-        content="https://woowlgames.com/logo.svg">
+        content="https://woowlgames.com/woowl-games-logo.svg">
     <meta property="twitter:site" content="@woowlgames">
     <meta property="twitter:creator" content="@woowlgames">
 
@@ -56,11 +56,22 @@
         "@context": "https://schema.org",
         "@graph": [
             {
+                "@type": "WebSite",
+                "@id": "https://woowlgames.com/#website",
+                "name": "Woowl Games",
+                "alternateName": "Woowl",
+                "url": "https://woowlgames.com"
+            },
+            {
                 "@type": "VideoGameDeveloper",
                 "@id": "https://woowlgames.com/#organization",
                 "name": "Woowl Games",
                 "alternateName": "Woowl",
                 "url": "https://woowlgames.com",
+                "logo": {
+                    "@type": "ImageObject",
+                    "url": "https://woowlgames.com/woowl-games-logo.svg"
+                },
                 "description": "Independent game development studio creating interactive experiences for mobile and PC platforms.",
                 "email": "woowlgames@gmail.com",
                 "sameAs": [
@@ -217,7 +228,7 @@
             <div class="flex justify-between items-center h-20">
                 <a href="#home" id="navbar-brand" aria-label="WOOWL GAMES"
                     class="opacity-0 transition-opacity duration-300 flex items-center gap-3">
-                    <img src="logo.svg" alt="Woowl Games Logo" class="h-9 w-auto">
+                    <img src="woowl-games-logo.svg" alt="Woowl Games Logo" class="h-9 w-auto">
                     <span class="font-logo font-extrabold text-3xl" style="color: #F2E9DC;">WOOWL GAMES</span>
                 </a>
                 <!-- Desktop Menu -->
@@ -298,7 +309,7 @@
             <!-- Content -->
             <div class="relative z-10 text-center px-4 max-w-6xl mx-auto">
                 <div id="hero-title" class="mb-6 flex flex-col items-center">
-                    <img src="logo.svg" alt="Woowl Games - Indie Game Developer Logo" class="w-48 h-auto md:w-64 mb-4">
+                    <img src="woowl-games-logo.svg" alt="Woowl Games - Indie Game Developer Logo" class="w-48 h-auto md:w-64 mb-4">
                     <h1 class="font-logo font-extrabold text-4xl md:text-5xl lg:text-6xl tracking-wider" style="color: #F2E9DC;">WOOWL GAMES</h1>
                 </div>
                 <!-- Badge -->
@@ -364,7 +375,7 @@
             <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
                 <h2
                     class="animate-on-scroll font-display text-5xl md:text-7xl font-bold text-center mb-6 bg-gradient-to-r from-accent-primary via-accent-secondary to-accent-tertiary bg-clip-text text-transparent">
-                    About</h2>
+                    About Woowl Games</h2>
                 <p class="animate-on-scroll text-center text-gray-500 mb-16 text-lg">Crafting unique interactive
                     experiences</p>
                 <div
@@ -453,7 +464,7 @@
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <h2
                     class="animate-on-scroll font-display text-4xl md:text-6xl font-bold text-center mb-16 bg-gradient-to-r from-accent-primary via-accent-secondary to-accent-tertiary bg-clip-text text-transparent">
-                    Games</h2>
+                    Our Games</h2>
                 <div class="grid md:grid-cols-2 gap-8">
                     <!-- Game Card 1 -->
                     <article
@@ -735,7 +746,7 @@
             <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
                 <h2
                     class="animate-on-scroll font-display text-5xl md:text-7xl font-bold text-center mb-6 bg-gradient-to-r from-accent-primary via-accent-secondary to-accent-tertiary bg-clip-text text-transparent">
-                    FAQ</h2>
+                    Woowl Games FAQ</h2>
                 <p class="animate-on-scroll text-center text-gray-400 mb-12 text-lg">Frequently Asked Questions</p>
 
                 <div class="space-y-4">
@@ -908,7 +919,7 @@
             <div class="grid md:grid-cols-3 gap-8 mb-8">
                 <div>
                     <div class="flex items-center gap-3 mb-2">
-                        <img src="logo.svg" alt="Woowl Games - Indie Studio" class="h-8 w-auto">
+                        <img src="woowl-games-logo.svg" alt="Woowl Games - Indie Studio" class="h-8 w-auto">
                         <span class="font-logo font-extrabold text-2xl" style="color: #F2E9DC;">WOOWL GAMES</span>
                     </div>
                     <p class="text-gray-300"><strong class="text-white">Woowl Games</strong> - Creating meaningful interactive experiences since 2024</p>
