seo: brand optimization and technical performance boost
- Rename logo to woowl-games-logo.svg for keyword relevance.
- Add premium custom 404.html page.
- Implement preconnect/preload for faster loading.
- Add GA4 tracking boilerplate and CSP security policy.
- Update rsync deployment to include all new assets.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    
+    <!-- Author Credit -->
+    <link rel="author" href="humans.txt">
 
     <!-- Primary Meta Tags -->
     <title>Woowl Games | Indie Game Developer</title>
@@ -219,6 +223,16 @@
         }
     </script>
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y9Q2PW64P0"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-Y9Q2PW64P0');
+    </script>
 </head>
 
 <body class="min-h-screen bg-primary text-white scroll-smooth overflow-x-hidden">
