fix: Scroll to explore position

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
     <main>
         <!-- Hero Section -->
         <section id="home"
-            class="min-h-screen flex items-center justify-center relative overflow-hidden bg-primary pt-20">
+            class="min-h-screen flex items-center justify-center relative overflow-hidden bg-primary pt-20 pb-16">
             <!-- Animated Gradient Orbs -->
             <div class="absolute inset-0 overflow-hidden">
                 <div class="orb orb-1 absolute w-[600px] h-[600px] rounded-full bg-gradient-to-r from-accent-primary via-accent-secondary to-accent-tertiary opacity-20 blur-[120px] animate-float"
@@ -367,7 +367,7 @@
                 </div>
             </div>
             <!-- Scroll Indicator - positioned outside content div -->
-            <div class="absolute bottom-4 inset-x-0 mx-auto w-fit animate-bounce-slow cursor-pointer z-20 text-center"
+            <div class="absolute bottom-10 inset-x-0 mx-auto w-fit animate-bounce-slow cursor-pointer z-20 text-center"
                 onclick="document.querySelector('#about').scrollIntoView({ behavior: 'smooth' })">
                 <span class="text-gray-300 text-sm mb-2 block">Scroll to explore</span>
                 <svg class="text-accent-primary w-6 h-6 mx-auto" fill="none" stroke="currentColor" viewBox="0 0 24 24">
