Revert "fix: implement glassmorphism navbar to prevent logo cutoff on mobile"
This reverts commit 6f497fc0dd116d53fc1564c0c902d9937b0920e1.

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
 <body class="min-h-screen bg-primary text-white scroll-smooth overflow-x-hidden">
     <!-- Navbar -->
-    <nav id="navbar" class="fixed top-0 left-0 w-full z-40 transition-all duration-300 bg-primary/30 backdrop-blur-xl border-b border-white/5">
+    <nav id="navbar" class="fixed top-0 left-0 w-full z-40 transition-all duration-300">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-20">
                 <a href="#home" id="navbar-brand" aria-label="WOOWL GAMES"
@@ -308,7 +308,7 @@
     <main>
         <!-- Hero Section -->
         <section id="home"
-            class="min-h-screen flex items-center justify-center relative overflow-hidden bg-primary pt-20 pb-16">
+            class="min-h-screen flex items-start md:items-center justify-center relative overflow-hidden bg-primary pt-24 md:pt-20 pb-16">
             <!-- Animated Gradient Orbs -->
             <div class="absolute inset-0 overflow-hidden">
                 <div class="orb orb-1 absolute w-[600px] h-[600px] rounded-full bg-gradient-to-r from-accent-primary via-accent-secondary to-accent-tertiary opacity-20 blur-[120px] animate-float"
