fix: display CTA buttons horizontally on mobile
- Change button layout from vertical (flex-col) to horizontal (flex-row) on all screen sizes
- Add max-width constraint and padding for better mobile spacing
- Reduce gap from 4 to 3 for tighter layout on small screens

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                         class="text-accent-tertiary">experimental gameplay</span>
                 </p>
                 <!-- CTA Buttons -->
-                <div class="animate-on-scroll flex flex-col sm:flex-row gap-4 justify-center items-center mb-16"
+                <div class="animate-on-scroll flex flex-row gap-3 justify-center items-center mb-16 w-full max-w-2xl px-4"
                     style="animation-delay: 0.6s;">
                     <a href="#games"
                         class="group relative px-8 py-4 bg-gradient-to-r from-accent-primary via-accent-secondary to-accent-tertiary text-white rounded-xl font-semibold shadow-lg shadow-glow hover:shadow-glow-hover transition-all overflow-hidden hover:-translate-y-1">
