--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                 </div>
                 <!-- Badge -->
                 <div
-                    class="animate-on-scroll inline-flex items-center gap-2 mb-8 px-6 py-3 backdrop-blur-xl bg-white/5 border border-white/10 rounded-full">
+                    class="animate-on-scroll inline-flex items-center gap-2 mb-4 md:mb-8 px-6 py-3 backdrop-blur-xl bg-white/5 border border-white/10 rounded-full">
                     <svg class="text-accent-primary w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
                         <line x1="16" y1="2" x2="16" y2="6"></line>
@@ -338,13 +338,13 @@
                     <span class="text-accent-primary text-sm font-medium tracking-wider uppercase">Since 2024</span>
                 </div>
                 <!-- Main heading -->
-                <div class="animate-on-scroll mb-6" style="animation-delay: 0.2s;">
+                <div class="animate-on-scroll mb-3 md:mb-6" style="animation-delay: 0.2s;">
                     <h2
                         class="font-display text-4xl md:text-5xl lg:text-6xl xl:text-7xl font-bold bg-gradient-to-r from-accent-primary via-accent-secondary to-accent-tertiary bg-clip-text text-transparent leading-tight">
                         We Create<br>Extraordinary Worlds</h2>
                 </div>
                 <!-- Subtitle -->
-                <p class="animate-on-scroll text-xl md:text-2xl lg:text-3xl text-gray-300 mb-12 max-w-4xl mx-auto leading-relaxed font-light"
+                <p class="animate-on-scroll text-xl md:text-2xl lg:text-3xl text-gray-300 mb-8 md:mb-12 max-w-4xl mx-auto leading-relaxed font-light"
                     style="animation-delay: 0.4s;">
                     Interactive experiences that blend <span class="text-accent-primary">exploration</span>, <span
                         class="text-accent-secondary">mystery</span>, and <span
